# music-discovery-engine

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Taskfile.yml  docker-compose.yml  main.py  pyproject.toml
.claude/: CLAUDE.md
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
alembic/: env.py
alembic/versions/: 35acad4283a0_create_users_table.py  48724afaf4c2_add_lastfm_profile_and_taste_profile_.py  5820d3435290_rename_playcount_to_count_and_add_.py  905825959a79_add_release_type_to_taste_profile_albums.py  a8f7cd795666_add_recommendation_history_table.py  b2a5b7b5ba69_add_artist_listener_cache_table.py  fc62dbcac6a8_seed_development_user.py
app/: config.py  database.py
app/clients/: discogs.py  lastfm.py
app/models/: app.py  musicbrainz.py
app/repositories/: discogs.py  generation.py  lastfm.py  mbid_resolution.py  recommendations.py
app/routers/: discogs.py  generation.py  lastfm.py  mbid_resolution.py  recommendations.py
app/services/: discogs.py  generation.py  lastfm.py  mbid_resolution.py  recommendations.py  scoring.py  seed_selection.py
app/services/taste_profile/: __init__.py  ingester.py
tests/: conftest.py  test_config.py  test_database.py  test_health.py  test_models.py
tests/clients/: test_discogs.py  test_lastfm.py
tests/repositories/: test_discogs.py  test_generation.py  test_lastfm.py  test_mbid_resolution.py  test_recommendations.py
tests/routers/: test_discogs.py  test_generation.py  test_lastfm.py  test_mbid_resolution.py  test_recommendations.py
tests/services/: test_discogs_service.py  test_discogs_source.py  test_generation.py  test_lastfm.py  test_lastfm_source.py  test_mbid_resolution.py  test_recommendations.py  test_scoring.py  test_seed_selection.py  test_taste_profile_ingester.py  test_taste_profile_types.py
