[project]
name = "music-discovery-engine"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "alembic",
    "fastapi",
    "httpx",
    "psycopg[binary]",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "sqlalchemy",
    "uvicorn",
]

[dependency-groups]
dev = [
    "pre-commit",
    "pyright[nodejs]",
    "pytest",
    "ruff",
]

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
